Enable 2FA endpoints and logc, fix cache middleware, fix account locked logic (#7)
